--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
 <label class="back-btn" for="c3">&lt;--</label>
 </div>
 <div class="front">
-<h3>A little gift</h3>
-
+<p>A little gift...</p>
+<br>
+<p>$10 amazon gift card</p>
+<br>
+<h2>&#9;2FWS-7GDA32-WTAF</h2>
 <label class="next-btn" for="c3">--&gt;</label>
 	</div>
 </div>
