--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 <p>$10 amazon gift card</p>
 <br>
 <h2>&#9;2FWS-7GDA32-WTAF</h2>
+<br>
+<br>
+<br>
+<h3>-Love,</h3>
+<h3>Choc. Lava Cake</h3>
 <label class="next-btn" for="c3">--&gt;</label>
 	</div>
 </div>
