--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 <meta charset="UTF-8">
-<title>Css Flip Book</title>
+<title>South loves Chanty &lt;3</title>
 <link rel="stylesheet" href="./Style.css">
 </head>
 <body>
